# lib/db/src/schema/index.ts
@@ -10,3 +10,4 @@ export * from "./audit";
 export * from "./applications";
 export * from "./employer";
 export * from "./smartApplyDrafts";
+export * from "./sponsorLicences";
